--- a/configuration/template.cfg
+++ b/configuration/template.cfg
@@ -168,7 +168,7 @@ docker_pull = False     # Options: True, False. Default: False
 # empty: Works with resource_manager = kubecontrol
 # empty_kata: Works with resource_manager = kube_kata
 # mem_usage / stress: Works with resource_manager = kubecontrol, kube_kata
-application = image_classification  # Options: image_classification, empty, empty_kata, mem_usage, stress
+application = image_classification  # Options: image_classification, empty, empty_kata, mem_usage, stress, opencraft
 
 # CPU (in cores) and memory (in GB) per application for the cloud/edge worker
 application_worker_cpu = 3.5       # Options: >= 0.1. Default: cloud_cores - 0.5
@@ -189,6 +189,9 @@ frequency = 5           # Options: >= 1 (mandatory if using this app)
 
 # For empty (experimental)
 sleep_time = 60         # Options: >= 1 (mandatory if using this app)
+
+# For minecraft
+steps_bot = 10          # Options: >= 1 (mandatory if using this app)
 
 # How to deploy with kube control - split apps on the level of pod, file, container, or call
 # Example:      Application with 10 instances (10 parallel codes should run)
