Change names from Minecraft to Opencraft

--- a/configuration/template.cfg
+++ b/configuration/template.cfg
@@ -190,7 +190,7 @@ frequency = 5           # Options: >= 1 (mandatory if using this app)
 # For empty (experimental)
 sleep_time = 60         # Options: >= 1 (mandatory if using this app)
 
-# For minecraft
+# For opencraft
 steps_bot = 10          # Options: >= 1 (mandatory if using this app)
 
 # How to deploy with kube control - split apps on the level of pod, file, container, or call
