Opencraft integration + WIP Yardstick experiment

--- a/application/opencraft/subscriber/opencraft.yml
+++ b/application/opencraft/subscriber/opencraft.yml
@@ -131,7 +131,7 @@ extras:
 world:
   name: world
   seed: ''
-  level-type: FLAT
+  level-type: default
   spawn-radius: 16
   view-distance: 8
   gen-structures: true
