--- a/configuration/bench_edge.cfg
+++ b/configuration/bench_edge.cfg
@@ -9,6 +9,9 @@ cloud_cores = 4
 cloud_memory = 4
 cloud_quota = 1.0
 
+middleIP = 160     
+middleIP_base = 161
+
 edge_nodes = 1
 edge_cores = 2
 edge_memory = 2
