--- a/configuration/bench_cloud.cfg
+++ b/configuration/bench_cloud.cfg
@@ -3,14 +3,17 @@
 [infrastructure]
 provider = qemu
 
-cloud_nodes = 4
-cloud_cores = 4
+cloud_nodes = 2
+cloud_cores = 2
 cloud_memory = 4
 cloud_quota = 1.0
 
-endpoint_nodes = 6
-endpoint_cores = 1
-endpoint_memory = 1
+middleIP = 160
+middleIP_base = 161
+
+endpoint_nodes = 5
+endpoint_cores = 2
+endpoint_memory = 4
 endpoint_quota = 0.5
 
 network_emulation = True
@@ -19,6 +22,6 @@ wireless_network_preset = 4g
 [benchmark]
 resource_manager = kubernetes
 docker_pull = True
-application = minecraft
+application = opencraft
 frequency = 5
-steps_bot = 10
+steps_bot = 50
