--- a/configuration/bench_cloud.cfg
+++ b/configuration/bench_cloud.cfg
@@ -11,17 +11,17 @@ cloud_quota = 1.0
 middleIP = 160
 middleIP_base = 161
 
-endpoint_nodes = 5
+endpoint_nodes = 2
 endpoint_cores = 2
 endpoint_memory = 4
 endpoint_quota = 0.5
 
-network_emulation = True
-wireless_network_preset = 4g
+network_emulation = False
 
 [benchmark]
 resource_manager = kubernetes
 docker_pull = True
 application = opencraft
 frequency = 5
-steps_bot = 50
+join_strategy = LinearJoin
+steps_bot = 10
