Added itzg based vanilla-like minecraft server image

--- a/configuration/bench_cloud.cfg
+++ b/configuration/bench_cloud.cfg
@@ -4,17 +4,17 @@
 provider = qemu
 
 cloud_nodes = 2
-cloud_cores = 2
-cloud_memory = 4
+cloud_cores = 8
+cloud_memory = 16
 cloud_quota = 1.0
 
 middleIP = 160
 middleIP_base = 161
 
-endpoint_nodes = 2
-endpoint_cores = 2
-endpoint_memory = 4
-endpoint_quota = 0.5
+endpoint_nodes = 100
+endpoint_cores = 1
+endpoint_memory = 1
+endpoint_quota = 1.0
 
 network_emulation = False
 
@@ -22,6 +22,7 @@ network_emulation = False
 resource_manager = kubernetes
 docker_pull = True
 application = opencraft
+server = minecraft
 frequency = 5
-join_strategy = LinearJoin
+join_strategy = FixedJoin
 steps_bot = 10
