Plotting and configs for paper server experiments

--- a/configuration/experiment_mc_cpumem_variation/cloud_0ms_cpu100_fixed.cfg
+++ b/configuration/experiment_mc_cpumem_variation/cloud_0ms_cpu100_fixed.cfg
@@ -2,22 +2,14 @@
 provider = qemu
 
 cloud_nodes = 2
-cloud_cores = 9
-cloud_memory = 9
+cloud_cores = 2
+cloud_memory = 8
 cloud_quota = 1.0
 
-endpoint_nodes = 1
+endpoint_nodes = 40
 endpoint_cores = 1
 endpoint_memory = 1
-endpoint_quota = 0.5
-
-network_emulation = True
-wireless_network_preset = 4g
-
-cloud_endpoint_latency_avg = 400
-cloud_endpoint_latency_var = 40
-
-delete = True
+endpoint_quota = 1
 
 middleIP = 160
 middleIP_base = 161
@@ -26,9 +18,8 @@ middleIP_base = 161
 resource_manager = kubernetes
 
 docker_pull = True
-
+join_strategy = FixedJoin
 application = opencraft
-steps_bot = 400
 frequency = 5
-
+steps_bot = 10
 server = minecraft
