--- a/configuration/experiment_mc_endpoint_scaling/linear20.cfg
+++ b/configuration/experiment_mc_endpoint_scaling/linear20.cfg
@@ -2,20 +2,14 @@
 provider = qemu
 
 cloud_nodes = 2
-cloud_cores = 9
-cloud_memory = 9
+cloud_cores = 7
+cloud_memory = 8
 cloud_quota = 1.0
 
-endpoint_nodes = 1
+endpoint_nodes = 20
 endpoint_cores = 1
 endpoint_memory = 1
-endpoint_quota = 0.5
-
-network_emulation = True
-wireless_network_preset = 4g
-
-cloud_endpoint_latency_avg = 400
-cloud_endpoint_latency_var = 40
+endpoint_quota = 1
 
 delete = True
 
@@ -26,9 +20,8 @@ middleIP_base = 161
 resource_manager = kubernetes
 
 docker_pull = True
-
+join_strategy = LinearJoin
 application = opencraft
-steps_bot = 400
+steps_bot = 50
 frequency = 5
-
 server = minecraft
