--- a/configuration/experiment_latency_var_oc/cloud_50ms_cpu200.cfg
+++ b/configuration/experiment_latency_var_oc/cloud_50ms_cpu200.cfg
@@ -6,7 +6,7 @@ cloud_cores = 9
 cloud_memory = 9
 cloud_quota = 1.0
 
-endpoint_nodes = 4
+endpoint_nodes = 1
 endpoint_cores = 1
 endpoint_memory = 1
 endpoint_quota = 0.5
@@ -14,8 +14,8 @@ endpoint_quota = 0.5
 network_emulation = True
 wireless_network_preset = 4g
 
-cloud_endpoint_latency_avg = 50
-cloud_endpoint_latency_var = 5
+cloud_endpoint_latency_avg = 250
+cloud_endpoint_latency_var = 25
 
 delete = True
 
@@ -28,8 +28,7 @@ resource_manager = kubernetes
 docker_pull = True
 
 application = opencraft
-steps_bot = 100
+steps_bot = 400
 frequency = 5
 
-application_worker_cpu = 2.0
-application_worker_memory = 2.0
+server = minecraft
